add user management api endpoints and allow cookie for api auth
